--- a/calorie-tracker-mcp-server/package.json
+++ b/calorie-tracker-mcp-server/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.4.0",
-    "better-sqlite3": "^12.2.0"
+    "better-sqlite3": "^12.2.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
