--- a/calorie-tracker-mcp-server/package.json
+++ b/calorie-tracker-mcp-server/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.4.0",
     "better-sqlite3": "^12.2.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
