--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
-    "uuid": "^12.0.0"
+    "uuid": "^12.0.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
